User Profile Pic Alignment Fixed

--- a/css/nav_style.css
+++ b/css/nav_style.css
@@ -5,18 +5,18 @@
 }
 
 .topnav .nav-brand {
-  float: left;
-    padding: 16px 18px;
+    float: left;
+    padding: 16px 18px;    
 }
 
 .topnav .btn {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 18px 20px;
-  text-decoration: none;
-  font-size: 30px;
-  margin-top: 25px;
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 18px 20px;
+    text-decoration: none;
+    font-size: 30px;
+    margin-top: 25px;
 }
 
 .topnav a.btn:hover, .topnav a.nav-right-2:hover {
@@ -29,13 +29,22 @@
   color: black;
 }
 
-.topnav a.nav-right-2, .topnav form.nav-form-right {
-  float: right;
-  text-align: center;
-  text-decoration: none;
-  padding: 18px 20px;
-  margin-top: 25px;
-  font-size: 30px;
+.topnav a.nav-right-2  {
+    float: right;
+    text-align: center;
+    text-decoration: none;
+    padding: 18px 20px;
+    margin-top: 10px;
+    font-size: 30px;
+}
+
+.topnav form.nav-form-right {
+    float: right;
+    text-align: center;
+    text-decoration: none;
+    padding: 18px 20px;
+    margin-top: 25px;
+    font-size: 30px;
 }
 
 .topnav a label.nav-menu{
@@ -78,9 +87,9 @@
   .topnav form:not(:first-child) {display: none;}
 
   .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: 30px;
+      float: right;
+      display: block;
+      margin-top: 30px;
   }
   
   .topnav a img.logo{
@@ -101,9 +110,9 @@
   }
   .topnav.responsive a {
       margin-top: 20px;
-    float: none;
-    display: block;
-    text-align: left;
+      float: none;
+      display: block;
+      text-align: left;
   }
   
   .topnav.responsive form{
@@ -149,3 +158,4 @@
       text-align: left;
   }
 }
+
